--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -1,21 +1,21 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-body{
+body {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh; /* biar bisa memanjang */
 }
 
 .container {
     position: relative;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start; /* jangan center biar bisa ikut tinggi konten */
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
     padding: 20px 100px;
 }
 
@@ -26,42 +26,43 @@ body{
     top: 0;
     width: 100%;
     height: 100%;
-    background: url('../images/1.jpg') no-repeat center;
+    background: url('../images/bg.jpg') no-repeat center;
     background-size: cover;
     z-index: -1;
     filter: blur(50px);
 }
 
-.contact-box{
+.contact-box {
     max-width: 850px;
+    width: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     justify-content: center;
-    align-items: center;
+    align-items: stretch; /* penting! agar kedua sisi punya tinggi sama */
     text-align: center;
     background-color: #fff;
     box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
-
 }
 
-.left{
-    height: 400px;
-    background: url('../images/1.jpg') no-repeat center;
+.left {
+    background: url('../images/2.png') no-repeat center;
     background-size: cover;
+    height: auto;
+    min-height: 100%; /* ikut tinggi form */
 }
 
-.right{
+.right {
     padding: 25px 40px;
+    border-color: black;
 }
 
-h2{
+h2 {
     position: relative;
     padding-bottom: 10px;
     margin-bottom: 20px;
-    margin: 0 20px; 
 }
 
-h2:after{
+h2:after {
     content: '';
     position: absolute;
     left: 50%;
@@ -73,8 +74,8 @@ h2:after{
     background-color: #3ecc71;
 }
 
-.field{
-    margin-top: 10px;
+.field {
+    margin-top: 7px;
     width: 100%;
     padding: 0.5rem 1rem;
     outline: none;
@@ -83,50 +84,61 @@ h2:after{
     margin-bottom: 5px;
     transition: .3s;
     border-radius: 10px;
-    height: 50px;
+    height: 45px;
 }
 
-.field:hover{
+.field:hover {
     background-color: rgba(0, 0, 0, 0.1);
 }
 
-.field:focus{
+.field:focus {
     background-color: #fff;
     border: 2px solid rgba(30, 85, 250, 0.47);
 }
 
-.btn{
+.btn {
     margin-top: 10px;
-    width: 100%;
+    width: 50%;
     padding: 0.5rem 1rem;
     font-size: 1.1rem;
     background-color: #2ecc71;
     cursor: pointer;
     outline: none;
     border: none;
-    color : #fff;
+    color: #fff;
     transition: .3s;
     border-radius: 20px;
-    height: 40px;
+    height: 30px;
+
+    display: inline-block;     
+    text-align: center;          
+    text-decoration: none; 
 }
 
-.btn:hover{
+.btn:hover {
     background-color: #27ae60;
 }
 
-@media screen and (max-width:768px){
+.tes {
+    margin-top: 10px;
+    
+}
+
+@media screen and (max-width:768px) {
     .container {
         padding: 10px;
     }
-    .contact-box{
+
+    .contact-box {
         grid-template-columns: 1fr;
     }
 
-    .left{
+    .left {
         height: 250px;
     }
 
-    .field, .btn {
+    .field,
+    .btn {
         font-size: 1rem;
         padding: 0.8rem;
     }
